=========
Changelog
=========

Version 3.5
    * Spectral Library Viewer: import and export of ASD, EcoSIS and SPECCHIO csv/binary files
    * Spectral Profile Source panel: controls how to extract SpectralProfiles and where to show them
    * supports import of multi-dimensional raster formats, like HDF and netCDF
    * ImageCube viewer to visualize hyperspectral data cubes (requires opengl)
    * Added CONTRIBUTOR_GUIDELINES.md
    * Documentation uses HYPERedu stylesheet (https://eo-college.org/members/hyperedu/)

Version 3.4
    * Spectral Library Viewer: import spectral profiles from raster file based on vector positions
    * Classification Widgets: copy / paste single class informations
    * Map tools to select / add vector features
    * fixed critical bug in IVVRM
    * several bug fixed and minor improvements

Version 3.3
    * added user +  developer example to RTF documentation
    * renamed plugin folder to "EnMAP-Box"
    * SpectralLibraries can be renamed and added to
      map canvases to show profile locations
    * SpectraProfiles now styled like point layers:
      point color will be line color in profile plot
    * Workaround for macOS bug that started
      new QGIS instances again and again and ...
    * Classification Workflow App
    * Re-designed Metadata Editor
    * Several bug fixes

Version 3.2
    ...

Version 3.1
    * EnMAP-Box is now based on QGIS 3, Qt 5.9,Python 3 and GDAL 2.2
    * QGISP lugin Installation from ZIP File
    * readthedocs documentation
      https://enmap-box.readthedocs.io/en/latest/index.html

previous versions:
    * version scheme following build dates
